Fix nav layout on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@
 @media only screen and (min-width: 320px) and (max-width: 768px) {
 	#onlineatlas #nav-mobile {display: block; cursor: pointer; position: absolute; z-index: 999; top: 10px; left: 5px; background: white url('../images/hamburger.svg') no-repeat center center; opacity: 0.9; height: 10px; width: 10px; padding: 17px; border-radius: 16px; box-shadow: 5px 5px 5px #aaa;}
 	#onlineatlas #mapcontainers nav {display: none;}	/* Default, toggled in JS */
-	#onlineatlas #mapcontainers nav {width: 90%; z-index: 999;}
+	#onlineatlas #mapcontainers nav {width: 90%; margin-left: 10%; z-index: 999;}
 	#onlineatlas #logo, #onlineatlas #comparebox, #onlineatlas p.export, #onlineatlas .summary, #onlineatlas .ui-tooltip {display: none;}
 	#onlineatlas .leaflet-control-fullscreen, #onlineatlas .leaflet-control-zoom {display: none;}
 	#onlineatlas .leaflet-control-locate {position: fixed; top: 60px;}
